完成购物车结算

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/PerkinsLi/Spring-Boot-Second-kill-view.git"
   },
   "author": "",
   "license": "ISC",
